// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`install dependencies fails with error message if exit code is not 0 1`] = `[Error: npm install --save --save-exact --loglevel error react react-dom]`;

exports[`install dependencies with npm 1`] = `
Array [
  "install",
  "--save",
  "--save-exact",
  "--loglevel",
  "error",
  "react",
  "react-dom",
]
`;

exports[`install dependencies with npm without passing dependencies 1`] = `
Array [
  "install",
  "--loglevel",
  "error",
]
`;

exports[`install dependencies with yarn 1`] = `
Array [
  "add",
  "--exact",
  "react",
  "react-dom",
  "--cwd",
  "test-module",
]
`;

exports[`install dependencies with yarn while offline 1`] = `
Array [
  "add",
  "--exact",
  "--offline",
  "react",
  "react-dom",
  "--cwd",
  "test-module",
]
`;

exports[`install dependencies with yarn without passing dependencies 1`] = `
Array [
  "install",
  "--cwd",
  "test-module",
]
`;

exports[`install devDependencies fails with error message if exit code is not 0 1`] = `[Error: npm install --save-dev --save-exact --loglevel error @americanexpress/one-app-bundler @americanexpress/one-app-runner amex-jest-preset-react babel-eslint babel-preset-amex enzyme enzyme-to-json eslint eslint-config-amex jest rimraf]`;

exports[`install devDependencies using npm 1`] = `
Array [
  "install",
  "--save-dev",
  "--save-exact",
  "--loglevel",
  "error",
  "@americanexpress/one-app-bundler",
  "@americanexpress/one-app-runner",
  "amex-jest-preset-react",
  "babel-eslint",
  "babel-preset-amex",
  "enzyme",
  "enzyme-to-json",
  "eslint",
  "eslint-config-amex",
  "jest",
  "rimraf",
]
`;

exports[`install devDependencies with npm without passing dependencies 1`] = `
Array [
  "install",
  "--loglevel",
  "error",
]
`;

exports[`install devDependencies with yarn 1`] = `
Array [
  "add",
  "--exact",
  "--dev",
  "@americanexpress/one-app-bundler",
  "@americanexpress/one-app-runner",
  "amex-jest-preset-react",
  "babel-eslint",
  "babel-preset-amex",
  "enzyme",
  "enzyme-to-json",
  "eslint",
  "eslint-config-amex",
  "jest",
  "rimraf",
  "--cwd",
  "test-module",
]
`;

exports[`install devDependencies with yarn while offline 1`] = `
Array [
  "add",
  "--exact",
  "--dev",
  "--offline",
  "@americanexpress/one-app-bundler",
  "@americanexpress/one-app-runner",
  "amex-jest-preset-react",
  "babel-eslint",
  "babel-preset-amex",
  "enzyme",
  "enzyme-to-json",
  "eslint",
  "eslint-config-amex",
  "jest",
  "rimraf",
  "--cwd",
  "test-module",
]
`;

exports[`install devDependencies with yarn without passing dependencies 1`] = `
Array [
  "install",
  "--production=false",
  "--cwd",
  "test-module",
]
`;
